test/spec_vectors/simd_i32x4_cmp/fail/module_17.wat
(module (func $i32x4.lt_s-arg-empty (result v128) (i32x4.lt_s)))